--- a/vscode/settings.json
+++ b/vscode/settings.json
@@ -1,13 +1,12 @@
 {
     "workbench.startupEditor": "newUntitledFile",
     "editor.fontFamily": "Hack, 'Droid Sans Mono', 'monospace', monospace, 'Droid Sans Fallback'",
-    "workbench.iconTheme": "material-icon-theme",
     "workbench.colorTheme": "Dark+ Material",
     "editor.minimap.enabled": false,
     "editor.wordWrap": "on",
     "git.autofetch": true,
     "todo-tree.tree.showScanModeButton": false,
-    "window.zoomLevel": 1,
+    "window.zoomLevel": 0,
     "go.useLanguageServer": true,
     "go.coverOnSave": true,
     "go.coverageDecorator": {
@@ -17,5 +16,8 @@
         "coveredGutterStyle": "blockgreen",
         "uncoveredGutterStyle": "blockred"
     },
-    "go.coverOnSingleTest": true
+    "go.coverOnSingleTest": true,
+    "editor.fontSize": 14,
+    "workbench.iconTheme": "material-icon-theme",
+    "material-icon-theme.saturation": 0
 }
